--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+*1.1.4.sermo (October 6, 2014)*
+
+  * Bump version v1.1.4.sermo
+  * Clean-up/reformatting for consistency
+  * Start/stop redis-server, as necessary, during `rake`
+
 *1.1.4 (August 20, 2013)*
 
   * Bump version v1.1.4
